k8s/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.goyangi.cloud"
spec:
  ingressClassName: external
  rules:
    - host: 'flux-webhook.goyangi.cloud'
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
